force-app/main/default/objects/genesis__Applications__c/fields/genesis__Asset_Liability_Info__c.field-meta.xml
<CustomField>
    <fullName>genesis__Asset_Liability_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset &amp; Liability Info</label>
    <referenceTo>genesis__Asset_Liability_Info__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>