force-app/main/default/objects/genesis__Applications__c/fields/genesis__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>genesis__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_assigned_to</relationshipName>
    <type>Lookup</type>
</CustomField>