force-app/main/default/objects/genesis__Applications__c/fields/genesis__Auto_Decisioning__c.field-meta.xml
<CustomField>
    <fullName>genesis__Auto_Decisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto  Decisioning</label>
    <type>Checkbox</type>
</CustomField>