force-app/main/default/objects/genesis__Applications__c/fields/genesis__Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Balloon_Payment__c</fullName>
    <label>Balloon Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>