force-app/main/default/objects/genesis__Applications__c/fields/genesis__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>