force-app/main/default/objects/genesis__Applications__c/fields/genesis__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>genesis__Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>