force-app/main/default/objects/genesis__Applications__c/fields/genesis__Bank_Transactions_Fetched__c.field-meta.xml
<CustomField>
    <fullName>genesis__Bank_Transactions_Fetched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when bank transactions are fetched for the borrower of this application.</description>
    <label>Bank Transactions Fetched</label>
    <type>Checkbox</type>
</CustomField>