force-app/main/default/objects/genesis__Applications__c/fields/genesis__Call_Code__c.field-meta.xml
<CustomField>
    <fullName>genesis__Call_Code__c</fullName>
    <label>Call Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>