force-app/main/default/objects/genesis__Applications__c/fields/genesis__Cap_Reduction__c.field-meta.xml
<CustomField>
    <fullName>genesis__Cap_Reduction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cap Reduction(-)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>