force-app/main/default/objects/genesis__Applications__c/fields/genesis__Cash_Collected_By_Dealer__c.field-meta.xml
<CustomField>
    <fullName>genesis__Cash_Collected_By_Dealer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cash Collected By Dealer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>