force-app/main/default/objects/genesis__Applications__c/fields/genesis__Charge_offs__c.field-meta.xml
<CustomField>
    <fullName>genesis__Charge_offs__c</fullName>
    <label>Charge_offs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>