force-app/main/default/objects/genesis__Applications__c/fields/genesis__CL_Company__c.field-meta.xml
<CustomField>
    <fullName>genesis__CL_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>clcommon__Company__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>