force-app/main/default/objects/genesis__Applications__c/fields/genesis__CL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>genesis__CL_Product_Name__c</fullName>
    <formula>genesis__CL_Product__r.clcommon__Product_Name__c</formula>
    <label>CL Product Name</label>
    <type>Text</type>
</CustomField>