force-app/main/default/objects/genesis__Applications__c/fields/genesis__Class_Code__c.field-meta.xml
<CustomField>
    <fullName>genesis__Class_Code__c</fullName>
    <label>Class Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>