force-app/main/default/objects/genesis__Applications__c/fields/genesis__Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Collateral_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Collateral</label>
    <referenceTo>clcommon__Collateral_Type__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>