force-app/main/default/objects/genesis__Applications__c/fields/genesis__Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Collateral_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Collateral Value (Auction Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>