force-app/main/default/objects/genesis__Applications__c/fields/genesis__Contact__c.field-meta.xml
<CustomField>
    <fullName>genesis__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Applications_contact</relationshipName>
    <type>Lookup</type>
</CustomField>