force-app/main/default/objects/genesis__Applications__c/fields/genesis__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>genesis__Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>