force-app/main/default/objects/genesis__Applications__c/fields/genesis__Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>genesis__Credit_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Rating</label>
    <referenceTo>genesis__Credit_Rating_Matrix__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>