force-app/main/default/objects/genesis__Applications__c/fields/genesis__Customer_Cash_Available__c.field-meta.xml
<CustomField>
    <fullName>genesis__Customer_Cash_Available__c</fullName>
    <label>Customer Cash Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>