force-app/main/default/objects/genesis__Applications__c/fields/genesis__Customer_Cash_Used_For__c.field-meta.xml
<CustomField>
    <fullName>genesis__Customer_Cash_Used_For__c</fullName>
    <label>Customer Cash Used For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Upfront Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>