force-app/main/default/objects/genesis__Applications__c/fields/genesis__Days_Convention__c.field-meta.xml
<CustomField>
    <fullName>genesis__Days_Convention__c</fullName>
    <label>Days Convention</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>genesis__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30/360</fullName>
                <default>true</default>
                <label>30/360</label>
            </value>
            <value>
                <fullName>365/365</fullName>
            </value>
            <value>
                <fullName>ACTUAL/ACTUAL</fullName>
            </value>
            <value>
                <fullName>ACTUAL/360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>