force-app/main/default/objects/genesis__Applications__c/fields/genesis__Dealer_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Dealer_Payment_Date__c</fullName>
    <label>Dealer Payment Date</label>
    <type>Date</type>
</CustomField>