force-app/main/default/objects/genesis__Applications__c/fields/genesis__Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>