force-app/main/default/objects/genesis__Applications__c/fields/genesis__Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Disbursement_Date__c</fullName>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>