force-app/main/default/objects/genesis__Applications__c/fields/genesis__Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>genesis__Discount_Rate__c</fullName>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>