force-app/main/default/objects/genesis__Applications__c/fields/genesis__Discount_Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>genesis__Discount_Rate_Based_On__c</fullName>
    <label>Discount Rate Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number of Payments</fullName>
            </value>
            <value>
                <fullName>Ending Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>