force-app/main/default/objects/genesis__Applications__c/fields/genesis__Documentation_Charges__c.field-meta.xml
<CustomField>
    <fullName>genesis__Documentation_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Documentation Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>