force-app/main/default/objects/genesis__Applications__c/fields/genesis__Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Down_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>