force-app/main/default/objects/genesis__Applications__c/fields/genesis__Draw_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Draw_Period_End_Date__c</fullName>
    <label>Draw Period End Date</label>
    <type>Date</type>
</CustomField>