force-app/main/default/objects/genesis__Applications__c/fields/genesis__Draw_Term__c.field-meta.xml
<CustomField>
    <fullName>genesis__Draw_Term__c</fullName>
    <label>Draw Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>