force-app/main/default/objects/genesis__Applications__c/fields/genesis__Due_Day__c.field-meta.xml
<CustomField>
    <fullName>genesis__Due_Day__c</fullName>
    <description>dueDay field.</description>
    <inlineHelpText>If Due Day field is null, then by default it will have Expected First Payment Date day value</inlineHelpText>
    <label>Due_Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>