force-app/main/default/objects/genesis__Applications__c/fields/genesis__Employee_Loan__c.field-meta.xml
<CustomField>
    <fullName>genesis__Employee_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Loan</label>
    <type>Checkbox</type>
</CustomField>