force-app/main/default/objects/genesis__Applications__c/fields/genesis__Estimated_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>genesis__Estimated_Selling_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Selling Price (+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>