force-app/main/default/objects/genesis__Applications__c/fields/genesis__Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Expected_Close_Date__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>