force-app/main/default/objects/genesis__Applications__c/fields/genesis__Expected_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Expected_First_Payment_Date__c</fullName>
    <label>Expected First Payment Date</label>
    <type>Date</type>
</CustomField>