force-app/main/default/objects/genesis__Applications__c/fields/genesis__Expected_Second_Pay_Day_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Expected_Second_Pay_Day_Date__c</fullName>
    <label>Expected Second Pay Day Date</label>
    <type>Date</type>
</CustomField>