force-app/main/default/objects/genesis__Applications__c/fields/genesis__Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Expected_Start_Date__c</fullName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>