force-app/main/default/objects/genesis__Applications__c/fields/genesis__Fees_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Fees_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fees Amount (+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>