force-app/main/default/objects/genesis__Applications__c/fields/genesis__Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Financed_Amount__c</fullName>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>