force-app/main/default/objects/genesis__Applications__c/fields/genesis__Funding_in_Tranches__c.field-meta.xml
<CustomField>
    <fullName>genesis__Funding_in_Tranches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding in Tranches</label>
    <type>Checkbox</type>
</CustomField>