force-app/main/default/objects/genesis__Applications__c/fields/genesis__Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>genesis__Gross_Annual_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>