force-app/main/default/objects/genesis__Applications__c/fields/genesis__Healthcare_Procedure__c.field-meta.xml
<CustomField>
    <fullName>genesis__Healthcare_Procedure__c</fullName>
    <label>Healthcare Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Orthodontics</fullName>
            </value>
            <value>
                <fullName>Lasik &amp; Vision</fullName>
            </value>
            <value>
                <fullName>Cosmetic</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Hair Restoration</fullName>
            </value>
            <value>
                <fullName>Veterinary</fullName>
            </value>
            <value>
                <fullName>Concierge Medical Care</fullName>
            </value>
            <value>
                <fullName>Chiropractic</fullName>
            </value>
            <value>
                <fullName>Other Specialties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>