force-app/main/default/objects/genesis__Applications__c/fields/genesis__ID_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__ID_Number__c</fullName>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>