force-app/main/default/objects/genesis__Applications__c/fields/genesis__ID_State__c.field-meta.xml
<CustomField>
    <fullName>genesis__ID_State__c</fullName>
    <label>ID State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>