force-app/main/default/objects/genesis__Applications__c/fields/genesis__ID_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>State ID Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Work ID</fullName>
            </value>
            <value>
                <fullName>Military ID</fullName>
            </value>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>Other Picture ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>