force-app/main/default/objects/genesis__Applications__c/fields/genesis__Initial_Advance__c.field-meta.xml
<CustomField>
    <fullName>genesis__Initial_Advance__c</fullName>
    <label>Initial Advance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>