force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Calculation_Method__c</fullName>
    <label>Interest Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declining Balance</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Flexible Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>