force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Only_Period__c</fullName>
    <label>Interest Only Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>