force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>