force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Get_Yield_Enabled__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Get_Yield_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then get the yield value for the payment schedule else gets the payment for the yield provided.</description>
    <label>Is Get Yield Enabled</label>
    <type>Checkbox</type>
</CustomField>