force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_over_21__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_over_21__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is over 21</label>
    <type>Checkbox</type>
</CustomField>