force-app/main/default/objects/genesis__Applications__c/fields/genesis__Landing_Sequence__c.field-meta.xml
<CustomField>
    <fullName>genesis__Landing_Sequence__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Landing Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>