force-app/main/default/objects/genesis__Applications__c/fields/genesis__Lending_Product__c.field-meta.xml
<CustomField>
    <fullName>genesis__Lending_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lending Product</label>
    <referenceTo>genesis__Loan_Product__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>