force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>