force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Number__c</fullName>
    <label>Loan Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>