force-app/main/default/objects/genesis__Applications__c/fields/genesis__LTV_Pledged_Collateral__c.field-meta.xml
<CustomField>
    <fullName>genesis__LTV_Pledged_Collateral__c</fullName>
    <description>Ratio of Loan Amount to Total Pledged Collateral Amount</description>
    <formula>IF( OR(ISPICKVAL(genesis__Product_Type__c ,&apos;LOAN&apos;),ISPICKVAL(genesis__Product_Type__c ,&apos;PACKAGE&apos;)) , genesis__Loan_Amount__c /  genesis__Total_Pledged_Collateral_Amount__c  ,
IF( ISPICKVAL(genesis__Product_Type__c ,&apos;LEASE&apos;), genesis__Financed_Amount__c / genesis__Total_Pledged_Collateral_Amount__c, genesis__Credit_Limit__c / genesis__Total_Pledged_Collateral_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ratio of Loan Amount to Total Pledged Collateral Amount</inlineHelpText>
    <label>LTV (Pledged Collateral)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>