force-app/main/default/objects/genesis__Applications__c/fields/genesis__Margin__c.field-meta.xml
<CustomField>
    <fullName>genesis__Margin__c</fullName>
    <label>Margin</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>