force-app/main/default/objects/genesis__Applications__c/fields/genesis__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Maturity_Date__c</fullName>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>