force-app/main/default/objects/genesis__Applications__c/fields/genesis__Maximum_Loan_Amount_DTI__c.field-meta.xml
<CustomField>
    <fullName>genesis__Maximum_Loan_Amount_DTI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Loan Amount(DTI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>