force-app/main/default/objects/genesis__Applications__c/fields/genesis__Minimum_Cash_Required__c.field-meta.xml
<CustomField>
    <fullName>genesis__Minimum_Cash_Required__c</fullName>
    <label>Minimum Cash Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>