force-app/main/default/objects/genesis__Applications__c/fields/genesis__Monthly_Debt_Payments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Monthly_Debt_Payments__c</fullName>
    <label>Monthly Debt Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>