force-app/main/default/objects/genesis__Applications__c/fields/genesis__Monthly_Income_Expense_Info__c.field-meta.xml
<CustomField>
    <fullName>genesis__Monthly_Income_Expense_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Income &amp; Expense Info</label>
    <referenceTo>genesis__Monthly_Income_Expense_Info__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>