force-app/main/default/objects/genesis__Applications__c/fields/genesis__Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>genesis__Net_Present_Value__c</fullName>
    <label>Net Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>