force-app/main/default/objects/genesis__Applications__c/fields/genesis__No_Of_Payments_Required_Upfront__c.field-meta.xml
<CustomField>
    <fullName>genesis__No_Of_Payments_Required_Upfront__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Payments Required Upfront</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>