force-app/main/default/objects/genesis__Applications__c/fields/genesis__Number_of_Pieces_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Number_of_Pieces_of_Equipment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Pieces of Equipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>