force-app/main/default/objects/genesis__Applications__c/fields/genesis__Other_Financed_fees__c.field-meta.xml
<CustomField>
    <fullName>genesis__Other_Financed_fees__c</fullName>
    <label>Other Financed fees (+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>