force-app/main/default/objects/genesis__Applications__c/fields/genesis__Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Overall_Status__c</fullName>
    <description>tracks the overall status of the application, i.e, application is with which department</description>
    <inlineHelpText>Tracks overall status of the application.</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>