force-app/main/default/objects/genesis__Applications__c/fields/genesis__Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Parent_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>