force-app/main/default/objects/genesis__Applications__c/fields/genesis__Participation_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Participation_Date__c</fullName>
    <label>Participation Date</label>
    <type>Date</type>
</CustomField>