force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payable_To_Dealer__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payable_To_Dealer__c</fullName>
    <label>Payable To Dealer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>