force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payment_Amount_Step_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Amount_Step_Up_Type__c</fullName>
    <description>This input is provided, only for Fin-Calc v.3.0 and above. This field has as percentage or amount. However this value is provided only for step-up repayment schedule, for step-up option.</description>
    <inlineHelpText>This input is provided, only for Fin-Calc v.3.0 and above. This field has as percentage or amount. However this value is provided only for step-up repayment schedule, for step-up option.</inlineHelpText>
    <label>Payment Amount Step Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>