force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Due_Date__c</fullName>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>