force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payment_Frequency_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Frequency_Multiplier__c</fullName>
    <description>Will be used as a multiplier factor with Payment Frequency to calculate Amortization Schedule.</description>
    <inlineHelpText>Will be used as a multiplier factor with Payment Frequency to calculate Amortization Schedule.</inlineHelpText>
    <label>Payment Frequency Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>