force-app/main/default/objects/genesis__Applications__c/fields/genesis__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>genesis__Portfolio__c</fullName>
    <label>Portfolio Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>