force-app/main/default/objects/genesis__Applications__c/fields/genesis__Prepaid_Interest_Option__c.field-meta.xml
<CustomField>
    <fullName>genesis__Prepaid_Interest_Option__c</fullName>
    <label>Prepaid Interest Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>