force-app/main/default/objects/genesis__Applications__c/fields/genesis__Prepayment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>genesis__Prepayment_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepayment Penalty</label>
    <type>Checkbox</type>
</CustomField>