force-app/main/default/objects/genesis__Applications__c/fields/genesis__Prepayment_Penalty_Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Prepayment_Penalty_Description__c</fullName>
    <label>Prepayment Penalty Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>